--- a/Editor/properties.lang
+++ b/Editor/properties.lang
@@ -99,7 +99,7 @@ _OrbitValue||Orbit Value*||Orbitの値*
 _OrbitSeed||Orbit Seed*||Orbitのシード値*
 _OrbitPrimitiveThreshold||Orbit Primitive Threshold*||Orbit Primitive 閾値*
 _OrbitOffset||Orbit Offset*/X/Y/Z||Orbitの座標オフセット*/X/Y/Z
-_OrbitScale||Orbit Scale*/Y/Z/Scale||Orbit スケール*/Y/Z/スケール
+_OrbitScale||Orbit Scale*/X/Y/Z/Scale||Orbit スケール*/X/Y/Z/スケール
 
 _OrbitRotationSource||Orbit Rotation Source||Orbit 回転の参照先
 _OrbitRotationSeed||Orbit Rotation Seed*||Orbit 回転のシード値*
